# tiqets-assignment

./: Dockerfile  README.md  docker-entrypoint.sh  main.py  pyproject.toml
.github/workflows/: python-app.yaml  python-app.yml
output/: result.csv
src/error_handlers/: validation_errors.py
src/file_handler/: csv_handler.py
src/models/: models.py
src/processor/: data_processor.py
src/tests/: test_processor.py
