[tool.poetry]
name = "tiqets-assignment"
version = "0.1.0"
description = "Assignment that process Tiqets orders and barcodes"
authors = ["Ömer Alkın <omeralkin7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
coverage = "^7.6.1"

[tool.poetry.dev-dependencies]
ruff = "0.6.1"
isort = "5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "E",  # Pycodestyle errors
    "F",  # Pyflakes errors
    "B",  # Bugbear rules
    "C",  # Complexity rules
    "I",  # Import conventions (used to ignore Ruff's sorting)
]

exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
]

line-length = 120

fixable = ["E", "F", "B", "C"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
